--- a/Source/KerbalAlarmClock/Properties/Version.tt
+++ b/Source/KerbalAlarmClock/Properties/Version.tt
@@ -84,5 +84,6 @@ namespace <#= PROJECT_NAME #>
 		public const int build = <#= build #>;
 		public const string Number = "<#= major #>.<#= minor #>.<#= patch #>.<#= build #>";
 		public const string Text = Number + " /L Unofficial";
+		public const string Vendor = "TriggerTech";
 	}
 }
